k3s/overlays/preprod/back-office/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-office
spec:
  template:
    spec:
      containers:
      - name: back-office
