k3s/overlays/preprod/back-office/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-office-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: preprod-admin.goodfood.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 80

    - host: preprod-admin.goodfood.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 80
